--- a/README.adoc
+++ b/README.adoc
@@ -1,12 +1,11 @@
 = AnyFood Web Application
 
-* Developed during Hack and Roll 2018 (Hackathon organised by NUS)
+image::logo.jpg[width="300"]
 
-* Inspiration 
+_Always had problems deciding on what to eat? Your significant other gives you the power of choice, but immediately rejects everything that you suggested? Anyfood is here for you._
 
-** Always had problems deciding on what to eat? Your significant other gives you the power of choice, but immediately rejects everything that you suggested? Anyfood is here for you.
+* This was our project idea for Hack and Roll 2018, a hackathon organised by NUS School of Computing. We came up with a start up idea, where we wanted to solve the probem of people not being able to decide on the food they wanted to eat, especially when out with their friends. We wanted to capitalise on the surge in popularity of food delivery giants such as Deliveroo and Uber Eats. The idea was to develop a webapp for people where they would simply need to choose their dietary requirements and choose the type of food varitey they desired. We would then deliver the food to them and the best part is that the item would be a surprise!
 
-* We give the deliver a surprise meal to the user based on his or her selection from a set of predefined themes
 
 * Screenshots
 
